2017-11-14  Sam Steingold  <sds@gnu.org>

	Make it easier for users to customize completion.
	* complete.lisp (ext:longest-common-prefix): Extract from completion.
	(completion): Use it.
	(*completion*): Set to #'completion.
	(ext:make-completion): New function for users.
	* init.lisp (*completion*): Export from CUSTOM.
	(make-completion, longest-common-prefix): Export from EXT.
	* constsym.d: Replace COMPLETION with *COMPLETION*.
	* spvw.d (init_symbol_values): Define *COMPLETION*.
	* stream.d (lisp_completion): Use *COMPLETION* instead of COMPLETION.

2017-11-12  Bruno Haible  <bruno@clisp.org>

	Fix "Warning: reserving address range" on some Linux/x86_64 systems.
	Reported by Sam Steingold at https://sourceforge.net/p/clisp/bugs/703/.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*): Tweak values for Linux/x86_64.
	(SINGLEMAP_TYPE_MASK): Likewise.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/hppa.
	* Makefile.devel (multibuild-linux-hppa): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/hppa, enable all optimizations
	except ASM, ARI_ASM, SP_ASM.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/x86_64-x32.
	* Makefile.devel (multibuild-linux-x86_64-32): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/x86_64-x32, enable all optimizations
	except ASM, ARI_ASM, SP_ASM.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/i386.
	* Makefile.devel (multibuild-linux-i386): Enable all build variants
	that work.
	(multibuild-linux-x86): Remove target.
	* makemake.in (XCFLAGS): For Linux/i386, enable all optimizations
	except ASM, ARI_ASM, SP_ASM.

2017-11-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/x86_64.
	* Makefile.devel (multibuild-linux-x86_64): Enable all build variants.
	* makemake.in (XCFLAGS): For Linux/x86_64, enable all optimizations
	except ASM, ARI_ASM, SP_ASM.
