@@ -90,6 +90,7 @@ User visible changes
   + Fix LOOP mixing WITH & Hash Table FOR (bug#585);
     avoid destructuring null patterns (bug#414);
     detect incomplete FOR clauses (bug#572);
+    check whether DO clauses are compound forms (bug#711);
     warn on REPEAT before FOR (bug#604).
   + Fix SOCKET-CONNECT with non-0 timeout (bug#587).
   + Reduce consing in HANDLER-BIND et al (bug#582).
